* Make the component tree a proper scrollable viewport with correct   width to avoid clipping on hover for large trees * Clean up hover and selection state to avoid weird UI issues

--- a/src/frontend/components/node-item/node-item.css
+++ b/src/frontend/components/node-item/node-item.css
@@ -1,7 +1,14 @@
-:host p {}
+:host {
+  flex-grow: 1;
+}
 
 :host .node-item-name {
-  margin-left: 5px;
+  margin-left: 0;
+  white-space: nowrap;
+}
+
+:host .node-item.self {
+  white-space: nowrap;
 }
 
 :host .node-item-value {
